--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Interior Designer</title>
   </head>
   <body>
-    <canvas></canvas>
+    <canvas tabindex="0"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
