add joystick for touch devices

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <canvas tabindex="0"></canvas>
+    <div class="joystick">
+      <div class="handle"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
