add portfolio link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="joystick">
       <div class="handle"></div>
     </div>
+    <div class="modal" hidden>
+      <div class="backdrop"></div>
+      <div class="content"></div>
+    </div>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
